Fix font style between browsers
The style `font: caption` is special Firefox rule copied from

    chrome://browser/content/extension.css

which looks bad on chrome.

Add a `browserInfo` JS function to detect browser, and apply
firefox-specific style dynamically.

--- a/options/options.scss
+++ b/options/options.scss
@@ -6,14 +6,23 @@
   --color-thead: #ebebeb;
 }
 
-// from chrome://browser/content/extension.css {{{
 body * {
   box-sizing: border-box;
 }
-html, body {
+
+body.firefox {
   font: caption;
+
+  label,
+  input[type="button"] {
+    font-size: larger;
+  }
+
+  input, button {
+    font: caption;
+    font-size: larger;
+  }
 }
-// }}}
 
 
 html {
@@ -42,14 +51,6 @@ fieldset {
 }
 legend {
   font-size: large;
-}
-input, button {
-  font: caption;
-}
-label,
-input[type="button"],
-button {
-  font-size: larger;
 }
 input[type="button"],
 input[type="checkbox"],
